# owlia-nest

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py  start.sh.example
.devdocs/: HELLO.md  sample.py  test.txt
skills/owlia-nest/: SKILL.md
src/owlia_nest/: __init__.py  __main__.py  cli.py  server.py
src/owlia_nest/icons/bytemd/: index.js  index.mjs  plugin-gfm.js
src/owlia_nest/static/: app.css  app.js  editor.css  editor.js
tests/: test_server.py
tools/: README.md  TASK.md  browser_check.mjs  dev_serve.py  e2e.mjs  e2e_serve.py
