[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owlia-nest"
version = "0.4.0"
description = "Self-hosted Markdown document browser for OpenClaw PA outputs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "markdown>=3.4",
    "pygments>=2.15",
]

[project.scripts]
owlia-nest = "owlia_nest.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
